get sur dossier-sinistres
